test_scripts/errors/var_does_not_exist.shm
let a = 12+does_not_exist