test_scripts/errors/var_does_not_exist.stderr
 1 | let a = 12+does_not_exist
                ^^^^^^^^^^^^^^
Error: Unknown identifier "does_not_exist"
